Remove redundant parentheses
- Use compact array declaration
- Use valueOf()